Illustratr: Add a max-width to gallery images/links to make sure it doesn't overflow

--- a/illustratr/style.css
+++ b/illustratr/style.css
@@ -3460,6 +3460,7 @@ Media
 .gallery-icon img {
 	display: inline-block;
 	margin: 0 auto;
+	max-width: 100%;
 	-webkit-transition: all 250ms ease;
 	-moz-transition: all 250ms ease;
 	-o-transition: all 250ms ease;
